--- a/Script/kaggle_home_price_prediction.ipynb
+++ b/Script/kaggle_home_price_prediction.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -281,7 +281,7 @@
        "[5 rows x 81 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -479,7 +479,7 @@
        "[5 rows x 80 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -571,7 +571,7 @@
        "(2919, 36)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -778,7 +778,7 @@
        "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -800,7 +800,7 @@
        "(1460, 36)"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -812,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -824,7 +824,7 @@
        "(1459, 36)"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -836,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -1030,7 +1030,7 @@
        "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1048,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -1291,7 +1291,7 @@
        "MSSubClass         0  0.000000"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1313,7 +1313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -1555,7 +1555,7 @@
        "MSSubClass         0  0.000000"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1577,7 +1577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -1597,7 +1597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -1608,7 +1608,7 @@
        "(1460, 33)"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1620,7 +1620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -1631,7 +1631,7 @@
        "(1459, 33)"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1643,7 +1643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -1838,7 +1838,7 @@
        "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1849,7 +1849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -2073,7 +2073,7 @@
        "MSSubClass         0      0.0"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2088,11 +2088,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/maviator/anaconda2/lib/python2.7/site-packages/pandas/core/generic.py:3295: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  self._update_inplace(new_data)\n"
+     ]
+    }
+   ],
    "source": [
     "test_numerical.BsmtHalfBath.fillna(-1, inplace=True);\n",
     "test_numerical.BsmtFullBath.fillna(-1, inplace=True);\n",
@@ -2113,7 +2125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -2337,7 +2349,7 @@
        "MSSubClass         0      0.0"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2359,7 +2371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -2370,7 +2382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -2381,7 +2393,7 @@
        "((1021, 33), (439, 33), (1021,), (439,), (1459, 33))"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2402,15 +2414,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "#model = RandomForestClassifier(n_estimators=100)\n",
+    "model = RandomForestClassifier(n_estimators=100)\n",
     "#model = SVC()\n",
-    "model = GradientBoostingClassifier()\n",
+    "#model = GradientBoostingClassifier()\n",
     "#model = KNeighborsClassifier(n_neighbors = 3)\n",
     "#model = GaussianNB()\n",
     "#model = LogisticRegression()"
@@ -2418,19 +2430,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
+       "            max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
+       "            min_impurity_split=1e-07, min_samples_leaf=1,\n",
+       "            min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
+       "            n_estimators=100, n_jobs=1, oob_score=False, random_state=None,\n",
+       "            verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model.fit(train_x, train_y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -2439,7 +2467,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0.73653281096963763, 0.0045558086560364463)\n"
+      "(0.99902056807051909, 0.01366742596810934)\n"
      ]
     }
    ],
@@ -2457,19 +2485,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Id</th>\n",
+       "      <th>SalePrice</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1461</td>\n",
+       "      <td>144000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1462</td>\n",
+       "      <td>157900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1463</td>\n",
+       "      <td>173000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1464</td>\n",
+       "      <td>178000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1465</td>\n",
+       "      <td>153900</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Id  SalePrice\n",
+       "0  1461     144000\n",
+       "1  1462     157900\n",
+       "2  1463     173000\n",
+       "3  1464     178000\n",
+       "4  1465     153900"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "test_y = model.predict(test_numerical)\n",
     "test_id = test.Id\n",
     "test_submit = pd.DataFrame({'Id': test_id, 'SalePrice': test_y})\n",
     "test_submit.shape\n",
     "test_submit.head()\n",
-    "test_submit.to_csv('house_price_pred_LogisticReg.csv', index=False)"
+    "#test_submit.to_csv('house_price_pred_GradientBoosting.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
