Reduced number of variable from 36 to 6 using correlation map

--- a/Script/kaggle_home_price_prediction.ipynb
+++ b/Script/kaggle_home_price_prediction.ipynb
@@ -1057,7 +1057,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Many of the analysis and core snippets are from this very thorough "
+    "Many of the analysis and core snippets are from this very detailed post: https://www.kaggle.com/pmarcelino/comprehensive-data-exploration-with-python"
    ]
   }
  ],
