New notebook using boosted gradient regression

--- a/Script/kaggle_home_price_prediction.ipynb
+++ b/Script/kaggle_home_price_prediction.ipynb
@@ -11,6 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### by Mohtadi Ben Fraj"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### In this version, we find the most correlated variables with 'SalePrice' and them in our Sklearn models"
    ]
   },
@@ -3179,6 +3186,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GradientBoostingRegressor(alpha=0.9, criterion='friedman_mse', init=None,\n",
+       "             learning_rate=0.1, loss='ls', max_depth=3, max_features=None,\n",
+       "             max_leaf_nodes=None, min_impurity_split=1e-07,\n",
+       "             min_samples_leaf=1, min_samples_split=2,\n",
+       "             min_weight_fraction_leaf=0.0, n_estimators=100,\n",
+       "             presort='auto', random_state=None, subsample=1.0, verbose=0,\n",
+       "             warm_start=False)"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(train_selected, train_selected_y)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3187,7 +3222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 76,
    "metadata": {
     "collapsed": false
    },
